fix overflow.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -86,6 +86,7 @@ body * {
 .editor-main {
   width: 100%;
   height: 100%;
+  max-height: 100vh;
   padding: 64px 64px 32px;
   display: flex;
   flex-direction: column;
